--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="AiChat – your personal assistant.">
   <meta name="keywords" content="AI,chat,assistant">
   <link rel="stylesheet" href="src/style.css" />
-  <link rel="preload" as="font" crossorigin="anonymous" href="assets/iconfont.woff2" />
+  <link rel="preload" as="font" crossorigin="anonymous" href="src/iconfont.woff2" />
   <script type="module" src="src/app.js" async></script>
 </head>
 <body class="app" id="app">
